--- a/force-app/main/default/lwc/cardTicketLwc/cardTicketLwc.html
+++ b/force-app/main/default/lwc/cardTicketLwc/cardTicketLwc.html
@@ -1,14 +1,52 @@
 <template>
-    <h1>{recordId}</h1>
-    <h2>{hello}</h2>
-    <h2>{name}</h2>
-    <h2>{objectApiName}</h2>
+    <lightning-card>
+        <div class="slds-grid slds-grid_align-space">
+            <div class="slds-col slds-m-top_large">
+                <p>{vooIda.Companhia__c}</p>
+                <p>{vooVolta.Companhia__c}</p>
+            </div>
 
-    <lightning-button variant="base" label="Clique Aqui" onclick={handleClick}></lightning-button>
+            <div class="slds-col">
+                <!--* Voo Origem -->
+                <div class="slds-grid slds-gutters">
+                    <div class="slds-col">
+                        <p><strong>{vooIda.Hora_de_Partida__c}</strong></p>
+                        <p>{vooIda.Aeroporto_Partida__r.Sigla__c}</p>
+                    </div>
+                    <div class="slds-col">
+                        <div class="seta"></div>
+                    </div>
+                    <div class="slds-col">
+                        <p><strong>{vooIda.Hora_de_Chegada__c} <template if:true={vooDeIdaDiferente}> +1
+                                </template></strong></p>
+                        <p>{vooIda.Aeroporto_Chegada__r.Sigla__c}</p>
+                    </div>
+                </div>
 
-    <template if:true={record.data}>
-        <h1>{record.data.label}</h1>
-        <h2>{record.data.pluralLabel}</h2>
-        <h2>{record.data.iconName}</h2>
-    </template>
+                <!--* Voo Volta -->
+                <div class="slds-grid slds-gutters">
+                    <div class="slds-col">
+                        <p><strong>{vooVolta.Hora_de_Partida__c}</strong></p>
+                        <p>{vooVolta.Aeroporto_Partida__r.Sigla__c}</p>
+                    </div>
+                    <div class="slds-col">
+                        <div class="seta"></div>
+                    </div>
+                    <div class="slds-col">
+                        <p><strong>{vooVolta.Hora_de_Chegada__c} <template if:true={vooDeVoltaDiferente}> +1 </template>
+                            </strong></p>
+                        <p>{vooVolta.Aeroporto_Chegada__r.Sigla__c}</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="slds-col slds-m-top_large">
+
+                <p><strong><lightning-formatted-number currency-code={moeda} currency-display-as="code"
+                            value={valorTotal}></lightning-formatted-number></strong></p>
+                <lightning-button variant="brand" label="Reservar" onclick={reservaHandler}></lightning-button>
+
+            </div>
+        </div>
+    </lightning-card>
 </template>
